style.css
/* 

Design Framework

1) Playful/Peace blend
2) Colors: Primary #f76707 Secondary #343a40

*/

/*
SPACING SYSTEM (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

FONT SIZE SYSTEM (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
*/

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	font-family: 'Inter', 'sans-serif';
	color: #343a40;
}

.container {
	width: 960px;
	margin: 0 auto;
}

header,
section {
	margin-bottom: 80px;
}

.grid-3-cols {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	column-gap: 12px;
}

.grid-2-cols {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	column-gap: 48px;
}

/* HEADER */

header {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	column-gap: 80px;
	margin-top: 64px;
}

.header-text-box {
	align-self: center;
}

.header-title-text {
	font-size: 62px;
	line-height: 1.2;
	margin-bottom: 32px;
	letter-spacing: -0.5px;
	color: #212529;
}

.header-text {
	margin-bottom: 24px;
	font-size: 18px;
	line-height: 1.5;
}

/* BUTTON */

.btn:link,
.btn:visited {
	display: inline-block;
	background-color: #6c63ff;
	color: #fff;
	text-decoration: none;
	font-weight: 500;
	border-radius: 50px;
}

/* .btn:hover,
.btn:active {
	background-color: #6C63FF;
} */

.btn-big {
	font-size: 16px;
	padding: 16px 32px;
}

/* FEATURES */

.feature-text {
	font-size: 36px;
	line-height: 1.2;
	margin-bottom: 32px;
	letter-spacing: -0.5px;
	color: #212529;
	/* text-align: center; */
}

.features-section {
	padding: 20px 20px;
	border-radius: 15px;
}

.features-section svg {
	align-self: center;
}

.features-title {
	font-size: 18px;
	margin-bottom: 8px;
}

.features-text {
	font-size: 16px;
	line-height: 1.5;
}

.features-container {
	display: grid;
	align-items: center;
	row-gap: 32px;
}

.features-container div {
	background-color: #edf2ff;
	padding: 15px 20px;
	border-radius: 20px;
}

.features-icon {
	stroke: #6c63ff;
	width: 35px;
	height: 35px;
	margin-bottom: 12px;
}

/* SECTION */

